--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,9 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+*2011 July 18*
+  * `v8::convert` namespace was renamed to `cvv8`, to preemptively avoid any collisions with future changes in v8.
+
 *2011 July 17*
   * Added "non-trivial function overloading" - see [V8Convert_Overloading].
   * Renamed several types for consistency.
